--- a/main.ipynb
+++ b/main.ipynb
@@ -121,6 +121,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "limite_superior = diam['price'].mean() + 3*diam['price'].std()\n",
+    "limite_inferior = diam['price'].mean() - 3*diam['price'].std()\n",
+    "diam_limpo = diam[diam['price'].between(limite_inferior,limite_superior)]"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -130,16 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = diam['price'].mean()"
+    "prediction = diam_limpo['price'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +179,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modelo utilizando média RMSE 3980.713882502374"
+    "# Modelo utilizando média RMSE 3980.713882502374\n",
+    "# Modelo utilizando média e tratamento de outliers 3990.1310912168146"
    ]
   },
   {
