remocao do tratamento outlier

--- a/main.ipynb
+++ b/main.ipynb
@@ -126,9 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limite_superior = diam['price'].mean() + 3*diam['price'].std()\n",
-    "limite_inferior = diam['price'].mean() - 3*diam['price'].std()\n",
-    "diam_limpo = diam[diam['price'].between(limite_inferior,limite_superior)]"
+    "#limite_superior = diam['price'].mean() + 3*diam['price'].std()\n",
+    "#limite_inferior = diam['price'].mean() - 3*diam['price'].std()\n",
+    "#diam_limpo = diam[diam['price'].between(limite_inferior,limite_superior)]"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = diam_limpo['price'].mean()"
+    "prediction = diam['price'].mean()"
    ]
   },
   {
